# Llama.cpp-Android

./: CMakePresets.json  Makefile  convert_hf_to_gguf.py  convert_hf_to_gguf_suezhiyuan.py  convert_lora_to_gguf.py
common/: common.cpp
examples/llama.android/: build.gradle.kts
examples/llama.android/app/: build.gradle.kts
examples/llama.android/app/src/main/: AndroidManifest.xml
examples/llama.android/app/src/main/java/com/example/llama/: MainActivity.kt
examples/llama.android/app/src/main/java/com/example/llama/data/: AppSetting.kt  AvailableModels.kt  LMProperties.kt
examples/llama.android/app/src/main/java/com/example/llama/lmloader/: LMHolder.kt
examples/llama.android/app/src/main/java/com/example/llama/ui/components/: AppDrawer.kt  Input.kt
examples/llama.android/app/src/main/java/com/example/llama/ui/components/dialog/: DeleteConversationDialog.kt  ModelCopyDialog.kt  SaveConversationDialog.kt
examples/llama.android/app/src/main/java/com/example/llama/ui/components/message/: MessageBubble.kt  TextResponse.kt  TypingIndicator.kt
examples/llama.android/app/src/main/java/com/example/llama/ui/components/settings/: ModelCard.kt
examples/llama.android/app/src/main/java/com/example/llama/ui/navigation/: Routes.kt
examples/llama.android/app/src/main/java/com/example/llama/ui/screens/: Conversation.kt  MainApp.kt  NewModelScreen.kt  Settings.kt
examples/llama.android/app/src/main/java/com/example/llama/ui/theme/: Theme.kt
examples/llama.android/app/src/main/java/com/example/llama/util/: ChatMLUtil.kt  ConversationIO.kt  RiffWaveHelper.kt
examples/llama.android/app/src/main/res/values/: strings.xml
examples/llama.android/llama/: build.gradle.kts
examples/llama.android/llama/src/main/cpp/: CMakeLists.txt  llama-android.cpp
examples/llama.android/llama/src/main/java/android/llama/cpp/: LLamaAndroid.kt
examples/main/: Makefile  hello_world  hello_world.cpp
gguf-py/gguf/: constants.py
scripts/: test-dora.sh  test-llama-3.1.sh  test-lora.sh  test-phi-2.sh  test-qwen-2.sh  test.sh
src/: llama.cpp
